@@ -4,6 +4,7 @@ Changelog
 2019.4.0rc4 (unreleased)
 ------------------------
 
+- Add UID to listing endpoints supported fields. [phgross]
 - Allow adding favorites by UID parameter via favorites endpoint. [phgross]
 - Add UID to listing endpoints supported fields. [phgross]
 - Allow adding favorites with UID parameter via favorites endpoint. [phgross]
